// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 GHeuE Button__StyledControl-sc-160jtek-2 laxGmE"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 eAoQmt Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 GHeuE Button__StyledControl-sc-160jtek-2 laxGmE"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 YAtrT Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 keQJiv Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 fOwTlG Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hPQykO Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ypEDL Button__StyledBox-sc-160jtek-0 hSjceq"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 fOwTlG Button__StyledControl-sc-160jtek-2 kcvpzh"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 bLxKYi Button__StyledLoadingIndicator-sc-160jtek-1 cefDbj"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
